# ditto_cot

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE.txt  Makefile  README.md  build.rs  shared-test-fixtures-summary.md
.config/: nextest.toml
.github/workflows/: ci.yml  java-ci.yml  rust-ci.yml
benches/: perf.rs
csharp/: Class1.cs  DocumentConverter.cs  README.md
csharp-client/: .gitignore  CLI_USAGE.md  DittoCoTClient.csproj  DittoCoTService.csproj  Program.cs  README.md  ServiceProgram.cs  ditto-cot  test_config.sh  validate_key.sh
csharp-client/Config/: ClientConfiguration.cs
csharp-client/DittoService/: DittoBackgroundService.cs  ServiceHost.cs
csharp-client/IPC/: DittoServiceClient.cs
csharp-client/Tests/: CoTRoundTripIntegrationTest.cs  SingleCoTTest.cs  StorageDebugTest.cs  TimestampDebugTest.cs
csharp/Models/: CoTEvent.cs  DittoDocuments.cs
csharp/Tests/: CoTToDittoConversionTests.cs  ComplexDetailTest.cs  DittoToCoTConversionTests.cs
csharp/example/: IntegrationClient.csproj  Program.cs
docs/: CROSS_LANGUAGE_CRDT_SOLUTION_SUMMARY.md  CROSS_LANGUAGE_CRDT_SOLUTION_SUMMARY.md.archived  INDEX.md  ditto-tak.md
docs/development/: building.md  getting-started.md  testing.md
fuzz/: Cargo.toml
java/: .gitignore  API_DIFFERENCES.md  LICENSE  README.md  build.gradle  inprogress.md  pom.xml  settings.gradle
rust/: Cargo.toml  README.md  build.rs  test_chat_callsign_debug.rs
rust/benches/: perf.rs
rust/examples/: cross_lang_doc_create.rs  cross_lang_xml_reconstruct.rs  debug_coordinates.rs  debug_detail_reconstruction.rs  e2e_test.rs  integration_client.rs  sdk_document_conversion.rs  test_cli_data.rs  test_flattening.rs  test_json_bug.rs  test_timestamp_fix.rs
rust/src/: CRDT_DUPLICATE_ELEMENTS_SOLUTION.md  cot_events.rs  crdt_detail_parser.rs  detail_parser.rs  ditto_sync.rs  error.rs  lib.rs  model.rs  plugin.rs  schema_validator.rs  xml_parser.rs  xml_utils.rs  xml_writer.rs
rust/src/ditto/: README.md  dql_support.rs  from_ditto.rs  from_ditto_util.rs  mod.rs  r_field_flattening.rs  schema.rs  sdk_conversion.rs  to_ditto.rs  to_ditto.rs.bak  transform_generic.rs
rust/tests/: chat_callsign_extraction_test.rs  cot_sensor_formats_test.rs  crdt_detail_parser_test.rs  cross_language_crdt_integration_test.rs  debug_xml_parsing.rs  dql_integration_test.rs  e2e_cross_lang_multi_peer.rs  e2e_multi_peer.rs  e2e_test.rs  error_handling_tests.rs  field_mapping_tests.rs  file_roundtrip_test.rs  generic_roundtrip_test.rs  integration.rs  integration_test.rs  roundtrip_tests.rs  schema_document_tests.rs  sdk_conversion_test.rs  underscore_key_tests.rs  usv_track_test.rs  xml_format_test.rs
rust/tests/fixtures/: mod.rs  test_utils.rs
rust/tests/test_utils/: mod.rs
schema/: api.schema.json  chat.schema.json  common.schema.json  ditto.schema.json  file.schema.json  generic.schema.json  mapitem.schema.json
src/: cot_events.rs  detail_parser.rs  ditto_sync.rs  error.rs  lib.rs  model.rs  plugins.rs  schema_validator.rs  xml_parser.rs  xml_writer.rs
swift/: .env.example  PHASE4_SUMMARY.md  Package.swift  README.md
tests/: integration.rs  roundtrip_tests.rs
(+103 files in other folders)
