[package]
name = "ditto_cot"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dittolive-ditto = "4.10.2"
xml-rs = "0.8"

[dev-dependencies]
pretty_assertions = "1.4"
anyhow = "1.0"

[build-dependencies]
cargo-nextest = "0.9.95"

[features]
dev-tools = []

[profile.ci]
inherits = "release"
codegen-units = 1  # Slower builds but faster code
incremental = false  # Disable incremental compilation for CI
lto = "thin"  # Thin LTO for better optimization

