[package]
name = "ditto_cot"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
xml-rs = "0.8"
schemars = "0.8.15"

[dev-dependencies]
pretty_assertions = "1.4"
anyhow = "1.0"
criterion = "0.5"
dittolive-ditto = "4.10.2"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
tempfile = "3.3.0"

[build-dependencies]
cargo-nextest = "0.9.95"
serde_json = "1.0"
walkdir = "2.3"
typify = "0.0.16"
schemars = "0.8.15"

[features]
dev-tools = []

[profile.ci]
inherits = "release"
codegen-units = 1  # Slower builds but faster code
incremental = false  # Disable incremental compilation for CI
lto = "thin"  # Thin LTO for better optimization

[lib]
bench = false

[[bench]]
name = "perf"
harness = false