[package]
name = "ditto_cot"
version = "0.0.1"
edition = "2021"
description = "High-performance Rust library for CoT XML and Ditto CRDT integration"
license = "MIT"
repository = "https://github.com/getditto-shared/ditto_cot"
homepage = "https://github.com/getditto-shared/ditto_cot"
keywords = ["cot", "ditto", "xml", "crdt", "tactical", "tak"]
categories = ["parsing", "data-structures"]
authors = ["Kit Plummer <kit@ditto.com>"]

[dependencies]
ryu = "1.0"
log = "0.4.20"
roxmltree = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
xml-rs = "0.8"
schemars = "0.8.15"
anyhow = "1.0"
similar = "2.2"
dittolive-ditto = "4.11.0"
base64 = "0.21"

[dev-dependencies]
pretty_assertions = "1.4"
anyhow = "1.0"
criterion = "0.5"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
tempfile = "3.3.0"

[build-dependencies]
serde_json = "1.0"
walkdir = "2.3"
typify = "0.0.16"
schemars = "0.8.15"

[features]
dev-tools = []

[profile.ci]
inherits = "release"
codegen-units = 1      # Slower builds but faster code
incremental = false    # Disable incremental compilation for CI
lto = "thin"           # Thin LTO for better optimization
debug = false
opt-level = 3
overflow-checks = true

[lib]
bench = false

[[bench]]
name = "perf"
harness = false

